--- a/_posts/2017-01-05-welcome.md
+++ b/_posts/2017-01-05-welcome.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Introducing Lanyon
+title: 欢迎
 ---
 
 欢迎来到我的博客，这是我的第一篇文章。这个博客托管在[Github](https://github.com)，使用[Github Pages](https://pages.github.com)生成,主题使用了[Lanyon](http://lanyon.getpoole.com)。
